[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Scenes/CreateGame.gd" type="Script" id=1]







[node name="CreateGame" type="Node"]
script = ExtResource( 1 )

[node name="CreateGameRequest" type="HTTPRequest" parent="."]
timeout = 10
[connection signal="request_completed" from="CreateGameRequest" to="." method="_on_CreateGameRequest_request_completed"]
